Added EF and initial migration

--- a/Skopia.ReneBizelli.Taskfy.Api/appsettings.Development.json
+++ b/Skopia.ReneBizelli.Taskfy.Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "sqlTaskfy": "Server=localhost,1433;Database=taskfy;User Id=sa;Password=taskfy,123!;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
