--- a/Skopia.ReneBizelli.Taskfy._Shared/appsettings.json
+++ b/Skopia.ReneBizelli.Taskfy._Shared/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "sqlTaskfy": ""
+    "sqlTaskfy": "Server=localhost,1433;Database=taskfy;User Id=sa;Password=taskfy,123!;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
