--- a/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
+++ b/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Skopia.ReneBizelli.Taskfy._Shared\Skopia.ReneBizelli.Taskfy._Shared.csproj" />
+  </ItemGroup>
+
 </Project>
