--- a/Skopia.ReneBizelli.Taskfy.Api/appsettings.json
+++ b/Skopia.ReneBizelli.Taskfy.Api/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Features": {
+    "Projects": {
+      "TaskItemsLimit": 20
+    }
+  }
 }
