--- a/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
+++ b/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.0.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
