--- a/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
+++ b/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
@@ -9,6 +9,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Features\TaskItems\NewFolder\**" />
+    <Content Remove="Features\TaskItems\NewFolder\**" />
+    <EmbeddedResource Remove="Features\TaskItems\NewFolder\**" />
+    <None Remove="Features\TaskItems\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
