--- a/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
+++ b/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
@@ -9,17 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Features\TaskItems\NewFolder\**" />
-    <Content Remove="Features\TaskItems\NewFolder\**" />
-    <EmbeddedResource Remove="Features\TaskItems\NewFolder\**" />
-    <None Remove="Features\TaskItems\NewFolder\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.0.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
     <PackageReference Include="MediatR" Version="13.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+    <PackageReference Include="OneOf" Version="3.0.271" />
   </ItemGroup>
 
   <ItemGroup>
