namespace fixed for UpdateTaskItem

--- a/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
+++ b/Skopia.ReneBizelli.Taskfy.Api/Skopia.ReneBizelli.Taskfy.Api.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\Skopia.ReneBizelli.Taskfy._Shared\Skopia.ReneBizelli.Taskfy._Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\TaskItems\RemoveTaskItem\" />
+  </ItemGroup>
+
 </Project>
